test/domains/compilerErrors/notsupportedStridable-ok.chpl
use notsupportedCommon;

writeln(dfltRectangularBase.strides);
//writeln(dfltAssociativeBase.strides);
writeln(DistributedBase.strides);
writeln(dfltRectangularSubdomain.strides);
//writeln(dfltAssociativeSubdomain.strides);
writeln(DistributedSubdomain.strides);
writeln(dfltRectangularSparseSub.strides);
//writeln(dfltAssociativeSparseSub.strides);
writeln(DistributedSparseSub.strides);
